packages/gumicorn/gumicorn-23.0.0.tar.gz/gumicorn-23.0.0/tests/requests/invalid/007.py
from gumicorn.http.errors import LimitRequestHeaders
request = LimitRequestHeaders
